e2e/__tests__/__snapshots__/requireAfterTeardown.test.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`prints useful error for requires after test is done w/ \`waitForUnhandledRejections\` 1`] = `
"FAIL __tests__/lateRequire.test.js
  ✕ require after done

  ● require after done

    ReferenceError: You are trying to \`require\` a file outside of the scope of the test code.

       9 | test('require after done', () => {
      10 |   setTimeout(() => {
    > 11 |     const double = require('../');
         |                    ^
      12 |
      13 |     expect(double(5)).toBe(10);
      14 |   }, 0);

      at TestState.throwIfBetweenTests (../../packages/jest-runtime/build/index.js:<<REPLACED>>)
      at Timeout.require [as _onTimeout] (__tests__/lateRequire.test.js:11:20)"
`;

exports[`prints useful error for requires after test is done w/o \`waitForUnhandledRejections\` 1`] = `
"PASS __tests__/lateRequire.test.js
  ✓ require after done


ReferenceError: You are trying to \`require\` a file after the Jest environment has been torn down. From __tests__/lateRequire.test.js.

       9 | test('require after done', () => {
      10 |   setTimeout(() => {
    > 11 |     const double = require('../');
         |                    ^
      12 |
      13 |     expect(double(5)).toBe(10);
      14 |   }, 0);

      at Timeout._onTimeout (__tests__/lateRequire.test.js:11:20)
<<REPO_ROOT>>/e2e/require-after-teardown/__tests__/lateRequire.test.js:12
    expect(double(5)).toBe(10);
           ^

[TypeError: double is not a function]

Node.js <<REPLACED>>"
`;
